k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brownie-metadata
  labels:
    name: brownie-metadata
