k8s/backup.yaml
apiVersion: v1
kind: Service
metadata:
  name: backup-service
  namespace: brownie-metadata
spec:
  selector:
    app: brownie-metadata-app
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  type: ClusterIP
